# energy-market-pipeline-

./: .env.example  .gitignore  Makefile  README.md  make_energy_cli.sh  pyproject.toml  run_block1.sh  run_block2.sh  run_block3.sh  run_block4.sh  run_block5.sh  run_block6.sh  run_dashboard.sh
.github/workflows/: ci.yml
configs/: kpi.yml  mapping.yml  sources.yml
data/reports/: dq_report_latest.json  ember_schema_summary.json  kpi_history.csv  kpi_latest.json  year_comparison_2015_2024.csv
scripts/: make_year_comparison.py  plot_eu_scatter.py  year_compare_dashboard.py
src/energy_market_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/energy_pipeline/: cli.py
src/energy_pipeline/common/: cache.py  config.py  log.py
src/energy_pipeline/config/: eu.py
src/energy_pipeline/dashboard/: app.py  app.py.bak.20260209_140730
src/energy_pipeline/ingest/: eia.py  ember.py  entsoe.py  entsoe_live.py  nbs_cn.py
src/energy_pipeline/kpi/: compute.py
src/energy_pipeline/normalize/: aggregate.py  aggregate.py.bak.20260209_140730  aggregate.py.bak.20260209_143410  aggregate.py.bak_fix_20260209_152617
src/energy_pipeline/report/: charts.py  compare.py  export.py  export.py.bak.20260209_143433  export.py.bak_fix_20260209_152635  run.py  run.py.bak.20260209_140730  yearly.py
src/energy_pipeline/runner/: pipeline.py  pipeline.py.bak.20260209_153702
src/energy_pipeline/viz/: energy_mix.py
tests/: test_aggregate_logic.py  test_kpi_logic.py  test_pipeline_runner.py  test_project_structure.py  test_smoke.py  test_smoke_imports.py
