[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-market-pipeline"
version = "0.1.0"
description = "Descriptive energy market pipeline (source-based, audit-friendly)."
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "pyarrow",
  "requests",
  "pydantic",
  "typer",
  "rich",
  "matplotlib",
  "python-dotenv",
  "pyyaml",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.scripts]
energy = "energy_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true
unsafe-fixes = false
exclude = [
  ".git",
  ".venv",
  "data",
  "dist",
  "build",
  "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["energy_pipeline"]
