[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-market-pipeline"
version = "0.1.0"
description = "Descriptive energy market pipeline (source-based, audit-friendly)."
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "pyarrow",
  "requests",
  "pydantic",
  "typer",
  "rich",
  "matplotlib",
  "python-dotenv",
  "pyyaml",
  "entsoe-py",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[project.scripts]
energy = "energy_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
